--- a/.env.example
+++ b/.env.example
@@ -1,22 +1,22 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:MNYx36AYWbECurz1d8JHRwVv3tdNPsiZ5UtXlGl08oU=
 APP_DEBUG=true
 APP_URL=http://localhost
 
 LOG_CHANNEL=stack
 
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_CONNECTION=pgsql
+DB_HOST=drona.db.elephantsql.com
+DB_PORT=5432
+DB_DATABASE=qvcawanr
+DB_USERNAME=qvcawanr
+DB_PASSWORD=fzWgOyI06Mqiue5jz8iF28tVyqeYqst6
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
-SESSION_DRIVER=file
+SESSION_DRIVER=cookie
 SESSION_LIFETIME=120
 
 REDIS_HOST=127.0.0.1
@@ -44,3 +44,6 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+SANCTUM_STATEFUL_DOMAINS=twitter.test
+SESSION_DOMAIN=twitter.test
