--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,17 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:MNYx36AYWbECurz1d8JHRwVv3tdNPsiZ5UtXlGl08oU=
+APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
 
 LOG_CHANNEL=stack
 
-DB_CONNECTION=pgsql
-DB_HOST=drona.db.elephantsql.com
+DB_CONNECTION=
+DB_HOST=
 DB_PORT=5432
-DB_DATABASE=qvcawanr
-DB_USERNAME=qvcawanr
-DB_PASSWORD=fzWgOyI06Mqiue5jz8iF28tVyqeYqst6
+DB_DATABASE=
+DB_USERNAME=
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
